# Black-hole-1

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  OLD_PROJECT_AUDIT.md  PHASE_GATES.md  vcpkg.json
physics/: CMakeLists.txt
physics/include/kerr_physics/: constants.hpp  disk.hpp  geodesics.hpp  metric.hpp  raytrace_cpu.hpp
physics/src/: constants.cpp  disk.cpp  geodesics.cpp  metric.cpp  raytrace_cpu.cpp
physics/tests/: test_conserved_quantities.cpp  test_disk_emission.cpp  test_kerr_geodesics.cpp  test_kerr_shadow.cpp  test_key_radii.cpp  test_schwarzschild_limit.cpp  test_shadow_size.cpp  test_util.hpp
physics/tools/: render_kerr_disk.cpp  render_reference_schwarzschild.cpp
writeup/: iteration_1_existing_project.md  writeup.md
writeup/screenshots/design_menu/: README.md
writeup/screenshots/iteration_1/: iter1_cmake_config.txt  iter1_complete_tag.txt  iter1_ctest_gate0_pass.txt  iter1_ctest_phase1.txt  iter1_gate0_tag.txt  iter1_phase1_err_before.txt  iter1_phase1_render_output.txt
writeup/screenshots/iteration_2/: iter2_ctest_gate2.txt  iter2_framedrag_theta.txt  iter2_gate2_tag.txt
writeup/screenshots/iteration_3/: iter3_disk_beaming.txt  iter3_gate4_tag.txt  iter3_kerr_render_output.txt
